--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,12 +17,12 @@ body {
     width: 400px;
     object-fit: none;
 }
-#camera--view,
+/* #camera--view,
 #camera--sensor,
 #camera--output {
     transform: scaleX(-1);
     filter: FlipH;
-}
+} */
 #container{
     position: absolute;
     left: 50%;
@@ -57,8 +57,8 @@ body {
     left: calc(50% - 100px);
 }
 .taken {
-    transform: scaleX(-1);
-    filter: FlipH;
+/*     transform: scaleX(-1);
+    filter: FlipH; */
     position: relative;
     object-fit: fill;
     height: 100px !important;
