--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,7 +60,7 @@ body {
 /*     transform: scaleX(-1);
     filter: FlipH; */
     position: relative;
-    object-fit: fill;
+    object-fit: cover;
     height: 100px !important;
     width: 100px !important;
     transition: all 0.5s ease-in;
